# Jackal

./: .gitignore  Cargo.toml  Makefile  README.md  jackal-dev  value_001.network
.github/workflows/: build.yml  test.yml
chess/src/: lib.rs  magics.rs
chess/src/attacks/: attacks.rs  bishop_attacks.rs  mod.rs  rays.rs  rook_attacks.rs  slider_attacks.rs
chess/src/base_structures/: bitboard.rs  castle_rights.rs  fen.rs  move.rs  piece.rs  square.rs
chess/src/board/: chess_board.rs  chess_board_from.rs  chess_board_utils.rs  chess_position.rs  draw_chess_board.rs  make_move.rs  see.rs
chess/src/move_gen/: generate_moves.rs  king_moves.rs  pawn_moves.rs  piece_moves.rs
chess/tests/: test_move.rs  test_perft.rs
datagen/: Cargo.toml
datagen/src/: display.rs  game.rs  main.rs  policy_gen.rs  printer.rs  utils.rs  value_gen.rs
engine/: Cargo.toml  build.rs
engine/src/: lib.rs  networks.rs  search_engine.rs  search_report_trait.rs
engine/tests/: test_bench.rs  test_draw.rs  test_history_hash.rs  test_mate.rs  test_node.rs  test_wdl_score.rs
policy_checkpoints/policy_007-1024_40-10/: log.txt
policy_checkpoints/policy_007cos-512see_300-monty-10/: log.txt
policy_checkpoints/policy_007cos-512see_300-monty-20/: log.txt
policy_checkpoints/policy_007cos-512see_300-monty-30/: log.txt
policy_checkpoints/policy_007cos-512see_300-monty-40/: log.txt
policy_checkpoints/policy_007cos-512see_300-monty-50/: log.txt
policy_checkpoints/policy_007cos-512see_300-monty-60/: log.txt
policy_checkpoints/policy_007cos-512see_300-monty-70/: log.txt
policy_checkpoints/policy_007cos-512see_300-monty-80/: log.txt
policy_checkpoints/policy_007cos-512see_300-monty-90/: log.txt
resources/networks/: mini.network  p10exp64ptd_see005q.network  p50cos128see006.network  p50cos128see006a.network  p50cos128see006b.network  p50cos128see006c.network  p50cos128see006d.network  p50cos128see006e.network  p50cos128see006f.network  p50cos128see006g.network  p50cos128see006h.network  v50cos256td002.network  v50cos64td002.network  value_002.network  value_003.network  value_004.network  value_004a.network  value_004b.network  value_005.network  value_005a.network  value_005b.network  value_005c.network  value_005d.network  value_006.network  value_006a.network  value_007.network  value_007a.network  value_008.network  value_008a.network  value_008b.network  value_008c.network  value_009.network  value_009a.network  value_009td.network
src/: bench.rs  color_config.rs  lib.rs  main.rs  options.rs  see.rs  utils.rs
src/datagen/: bin.rs  mod.rs  printer.rs  utils.rs  value_gen.rs
src/options/: check_bool.rs  mod.rs  options_base.rs  spin_float.rs  spin_float_tunable.rs  spin_int.rs  spin_int_tunable.rs  traits.rs
src/processors/: misc_commands_processor.rs  mod.rs  params_processor.rs  uci_processor.rs
src/search/: game_state.rs  mcts.rs  mod.rs  search_engine.rs  search_helpers.rs  search_limits.rs  search_stats.rs
src/spear/: mod.rs
src/train/: bullet_convert.rs  mod.rs
terminal/: Cargo.toml
terminal/src/: input_wrapper.rs  main.rs
train/: Cargo.toml
train/src/: bullet_convert.rs  bullet_convert_display.rs  main.rs
train/src/policy/: mod.rs  policy_convert.rs  policy_convert_display.rs  policy_shuffle.rs  policy_trainer.rs
train/src/value/: mod.rs  value_convert.rs  value_convert_display.rs  value_trainer.rs
trainer/: Cargo.toml
trainer/src/: convert.rs  interleave.rs  main.rs  policy_train.rs  value_train.rs
trainer/src/policy_train/: policy_inputs.rs
utils/src/: color_utils.rs  lib.rs  terminal_utils.rs
(+119 files in other folders)
