[package]
name = "jackal"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = 'abort'
strip = true
lto = 'fat'
codegen-units = 1
opt-level = 3

[dependencies]
colored = "*"
once_cell = "1.10.0"
console = "0.15"
spear = { package = "spear", git = 'https://github.com/TomaszJaworski777/Spear' }

[workspace]
members = ["datagen", "train"]
resolver = "2"