[package]
name = "jackal"
version = "1.1.0"
edition = "2021"

[profile.release]
panic = 'abort'
strip = true
lto = 'fat'
codegen-units = 1
opt-level = 3

[dependencies]
colored = "*"
console = "0.15"
term_cursor = "0.2.1"
term_size = "0.3.2"
spear = { package = "spear", git = 'https://github.com/TomaszJaworski777/Spear', features = ["pext"] }

[workspace]
members = ["datagen", "train"]
resolver = "2"