[package]
name    = "datagen"
version = "0.1.0"
edition = "2021"

[dependencies]
engine = { path = "../engine" }
chess  = { path = "../chess" }
utils  = { path = "../utils" }
montyformat = "*"
crossbeam = "*"
rand = "*"

[features]
# Local features
policy_datagen = ["engine/policy_datagen"]
value_datagen  = ["engine/value_datagen"]