[package]
name    = "datagen"
version = "0.1.0"
edition = "2021"

[dependencies]
engine = { path = "../engine" }
chess  = { path = "../chess" }
utils  = { path = "../utils" }
montyformat = "0.9.2"
crossbeam = "*"
rand = "*"

[features]
policy_datagen = ["engine/policy_datagen"]
value_datagen  = ["engine/value_datagen"]