[package]
name = "train"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.18.0"
jackal = { path = "../" }
spear = { package = "spear", git = 'https://github.com/TomaszJaworski777/Spear' }
bullet = { package = "bullet_lib", git = 'https://github.com/jw1912/bullet', features = ["hip"] }