[package]
name    = "trainer"
version = "0.1.0"
edition = "2021"

[dependencies]
engine = { path = "../engine" }
chess  = { path = "../chess" }
bullet = { package = "bullet_lib", git = 'https://github.com/jw1912/bullet', features = ["hip"], rev = "da3cd73e0687adcae1439e814dc0607f96cff356" }

[features]
policy_trainer = []
value_trainer = []
policy_interleave = []