[package]
name    = "trainer"
version = "0.1.0"
edition = "2021"

[dependencies]
engine = { path = "../engine" }
chess  = { path = "../chess" }
bullet = { package = "bullet_lib", git = 'https://github.com/jw1912/bullet', default-features = false, features = ["hip"], rev = "95be83356a320a18c76b8c7c3507cc4d933ebcca" }

[features]
policy_trainer = []
value_trainer = []
policy_interleave = []